--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@metamask/providers": "^8.1.1",
     "@tailwindcss/forms": "^0.5.0",
     "@types/react": "^17.0.43",
+    "ethers": "^5.6.4",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
